# Ceo

./: .gitignore  start-all.bat
.claude/: settings.local.json
ai-poster-api/: .env.example  celebrities  main.py  requirements.txt
face-quiz/backend/: Dockerfile  main.py  requirements.txt
face-quiz/backend/app/: config.py  main.py  models.py  yolo_client.py
face-quiz/backend/data/: celebrity_embeddings.pkl
face-quiz/backend/scripts/: build_celebrity_db.py  download_all.py  download_photos.py  download_real_photos.py
face-quiz/frontend/: next.config.js  package-lock.json  package.json
face-quiz/frontend/pages/: index.tsx
poster-maker-api/: Dockerfile  requirements.txt
poster-maker-api/app/: __init__.py  config.py  main.py  models.py
poster-maker-api/app/services/: __init__.py  face_swap_service.py
stario-platform/: .env.example  .gitignore  README.md  docker-compose.yml  mock-api.py  start-frontend.bat
stario-platform/.github/workflows/: ci.yml  load-test.yml
stario-platform/apps/admin-ui/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
stario-platform/apps/face-quiz-app/: index.html  package-lock.json  package.json  vite.config.ts
stario-platform/apps/telegram-miniapp/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
stario-platform/apps/web-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
stario-platform/docs/api/: openapi.yaml
stario-platform/docs/architecture/: system-design.md
stario-platform/shared/python-lib/: pyproject.toml
stario-platform/shared/python-lib/stario_common/: __init__.py  auth.py  config.py  database.py  exceptions.py  logging.py  metrics.py  models.py  redis_client.py  s3_client.py
yolo-detection-api/app/: config.py  main.py  model.py  schemas.py
(+141 files in other folders)
